--- a/.travis.yml
+++ b/.travis.yml
@@ -2,10 +2,10 @@ language: python
 python:
         - "3.5"
         - "3.6"
+        - "3.7"
 install: 
-        - pip install coveralls
+        - pip3 install coveralls
 script:
         - python3 -m unittest
-        - coverage run --source cookiecutter rpn.py test
 after_success:
         coveralls
